fixed layout buggs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .main-content {
